<resources>
    <string name="app_name"></string>

    <string name="filter_effect">Filter Effect</string>
    <string name="description">description</string>
    <string name="add_text">Add Text</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="export">Export</string>
    <string name="saddoda">SADDODA</string>
    <string name="add_emoji">Add Emoji</string>
    <string name="emoji">Emoji</string>
    <string name="fx_effect">FX Effect</string>
    <string name="title_activity_notification">notification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brush_size">Brush Size</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="eraser">Eraser</string>
    <string name="successfully_saved">Successfully saved</string>
</resources>