<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/g1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addmore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/add"
            android:textColor="@color/matteBlack"
            android:textSize="21sp"
            app:srcCompat="@drawable/menu_36px" />

        <ImageView
            android:id="@+id/content_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            android:padding="10dp"
            app:srcCompat="@drawable/logo_icon" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/matteBlack"
            android:textSize="21sp"
            app:srcCompat="@drawable/menu_36px" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/g2">

        <Button
            android:id="@+id/add_emoji_button"
            style="@style/Widget.Button_Outline"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            android:text="@string/emoji"
            />

        <Button
            android:id="@+id/filter_button"
            style="@style/Widget.Button_Gradient"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            android:text="@string/fx_effect" />

        <Button
            android:id="@+id/brush_button"
            style="@style/Widget.Button_Outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/brush"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/contentColor"
        app:layout_constraintBottom_toBottomOf="@id/g2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/g1"
        android:gravity="center_vertical"
       >

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/imageAdded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:layout_weight="1"
            app:layout_constraintVertical_bias="0.0"
             />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>